--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -19,6 +19,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
       # Runs a single command using the runners shell
       - name: Run a python script
         run: python test.py
